Fix inputs on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -122,6 +122,14 @@ input {
     display: none;
 }
 
+input[type="number"]::-webkit-inner-spin-button {
+    display: none;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 .footer {
     display: flex;
     align-items: center;
